fixed yaml front matter, added descriptions

--- a/content/devops/cloud-apps-guide/1.md
+++ b/content/devops/cloud-apps-guide/1.md
@@ -1,6 +1,7 @@
 ---
 date: 2015-10-24T00:27:09+05:30
-title: 'The Ultimate Guide to Building Cloud Applications'
+description: Revisiting basic principles to engineer products
+title: The Ultimate Guide to Building Cloud Applications
 tags:
   - devops
   - cloud
