--- a/content/devops/cloud-apps-guide/2.md
+++ b/content/devops/cloud-apps-guide/2.md
@@ -1,5 +1,6 @@
 ---
 date: 2015-12-06T00:27:09+05:30
+description: Developing better code with simplistic philosophies
 title: 'The Ultimate Guide to Building Cloud Applications: Development'
 tags:
   - devops
