migrate to netlify

--- a/content/devops/cloud-apps-guide/2.md
+++ b/content/devops/cloud-apps-guide/2.md
@@ -137,8 +137,8 @@ Building a consistent interaction to the code will give not only give one the
 ability to move faster, but others as well who are excited by what is being built.
 For instance, this year I was immensely excited by some huge open source projects
 that gained profound momentum from both a DevOps and Business perspectives -
-[Docker](https://www.docker.com), [Mesos](http://mesos.apache.org) and
-[Ansible](http://www.ansible.com). The projects have brought solutions to very
+[Docker](https://www.docker.com), [Mesos](https://mesos.apache.org) and
+[Ansible](https://www.ansible.com). The projects have brought solutions to very
 complex problems to the hands of everyday programmers like you and me. It has been
 made possible because they follow a strict policy of providing the easiest of
 interfaces which are simple enough to get started and complex enough to be extensible
