--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -1,5 +1,6 @@
 \documentclass[margin,line]{res}
 
+\usepackage{verbatim}
 \oddsidemargin -.5in
 \evensidemargin -.5in
 \textwidth=6.0in
@@ -39,8 +40,10 @@
 
   \end{tabular}
 
-% \section{\sc Research Interests}
-  % Computer Vision, Neural Networks
+%\begin{comment}
+\section{\sc Research Interests}
+  Computer Vision, Neural Networks, Deep Learning
+%\end{comment}
 
 \section{\sc Education}
   {\bf Indian Institute of Technology, Hyderabad}, India \hfill 2012 - 2016 \\
@@ -88,13 +91,13 @@
   Qualified for {\it ACM ICPC Amritapuri Regionals} among over 1500 teams, 2013
 
   \vspace*{-2.5mm}
-  {\bf TODAI Award} by {\it University of Tokyo, Japan} for outstanding academic performance to {\bf top one} student per major with cash prize of USD 1500, 2013
+  {\bf TODAI Award} by {\it University of Tokyo, Japan} for outstanding academic performance to {\bf top one} student per batch with cash prize of USD 1500, 2013
 
   \vspace*{-2.5mm}
-  {\bf Academic Excellence Award} by {\it IIT Hyderabad} for highest GPA in major, 2012
+  {\bf Academic Excellence Award} by {\it IIT Hyderabad} for highest GPA in the batch, awarded only to one student, 2012
 
   \vspace*{-2.5mm}
-  {\bf Top 0.5\%} in {\it IIT JEE} among 0.5 million students and {\bf Top 0.1\%} in {\it AIEEE} among 1.2 million students
+  {\bf Top 0.5\%} in {\it IIT JEE} among 0.5 million students and {\bf Top 0.1\%} in {\it AIEEE} among 1.2 million students, 2012
 
 \section{\sc Research Experience}
   {\bf Sports Recognition via Dense Trajectory Features} \hfill September - November, 2015 \\
@@ -159,7 +162,7 @@
 
 \section{\sc Positions of Responsibility}
   {\bf Volunteer, National Service Scheme}, IIT Hyderabad \hfill 2012 - 2016 \\
-    I was actively involved in many social activities. I {\it visited old-age homes and made donations}. I was actively involved in {\it planting and watering greens} around the campus. I also gave {\it lectures on Basic Science and Mathematics} to primary school students. I was also a volunteer for the {\it campus street cleanliness drive} to remove dirt and weeds.
+    I {\it visited old-age homes and made donations}. I was actively involved in {\it planting and watering greens} around the campus. I gave {\it lectures on Basic Science and Mathematics} to primary school students. I was also a volunteer for the {\it campus street cleanliness drive} to remove dirt and weeds.
 
   \vspace*{-2mm}
   {\bf Core Member, Infero}, IIT Hyderabad \hfill 2013 - 2014 \\
@@ -169,9 +172,19 @@
   {\bf Events Manager, Entrepreneurship Cell}, IIT Hyderabad \hfill 2013 - 2014 \\
     I was responsible for managing campus and city-wide events for the club. My team introduced the {\bf first ever lecture series} called {\it Spark} which invited successful entrepreneurs for lectures and interaction. I also drafted a {\it Business Plan Competition} as a part of the technical fest.
 
+%\begin{comment}
 \section{\sc References}
-  {\it Available on request}
 
+  \begin{tabular}{@{}p{1.85in}p{2in}p{2in}}
+
+  {\bf Dr. Vineeth N \newline Balasubramaniam } & {\bf Dr. Ramakrishna \newline Upadrasta} & {\bf Joerg Schad} \\
+        {\it Assistant Professor} & {\it Assistant Professor} & {\it Distributed Systems Engineer} \\
+        {\it IIT Hyderabad} & {\it IIT Hyderabad} & {\it Mesosphere Inc} \\
+        {\it Hyderabad, India} & {\it Hyderabad, India} & {\it Hamburg, Germany} \\
+        {\it vineethnb@iith.ac.in} & {\it ramakrishna@iith.ac.in} & {\it joerg@mesosphere.io} \\
+
+  \end{tabular}
+%\end{comment}
 
 \end{resume}
 \end{document}
