Improved CV formatting

--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -30,13 +30,14 @@
 \begin{resume}
 
 \section{\sc Contact Information}
+
   \vspace{.05in}
   \begin{tabular}{@{}p{2.9in}p{4in}}
 
-	{\it Mobile:}  (91) 77021-82987 \\
+	{\it Mobile:}  (91)7702182987 \\
 	{\it E-mail:}  cs12b1043@iith.ac.in\\
-	{\it Website:} https://blog.sanyamkapoor.com \\
-	{\it Github:} https://github.com/activatedgeek \\
+	{\it Website:} blog.sanyamkapoor.com \\
+	{\it Github:} github.com/activatedgeek \\
 
   \end{tabular}
 
@@ -46,129 +47,137 @@
 %\end{comment}
 
 \section{\sc Education}
+
   {\bf Indian Institute of Technology, Hyderabad}, India \hfill 2012 - 2016 \\
-  \vspace*{-.1in}
-  \begin{list1}
-	\item[] B. Tech. Computer Science and Engineering
-	\item[] GPA: 8.62 / 10 ({\bf Top 10})
-  \end{list1}
+  	B. Tech. Computer Science and Engineering,
+	GPA: 8.62 / 10 ({\bf Top 10})
 
   \vspace*{-2.5mm}
 
   {\bf La Montessori School}, Kullu, HP, India \hfill 2010 - 2012 \\
-  \vspace*{-.1in}
-  \begin{list1}
-  	\item[] Intermediate (Physics, Mathematics, Chemistry)
-	\item[] Percentage Score: 93.4\% ({\bf Rank 1})
-  \end{list1}
+	Intermediate (Physics, Mathematics, Chemistry),
+    Percentage Score: 93.4\% ({\bf Rank 1})
 
   \vspace*{-2.5mm}
 
   {\bf La Montessori School}, Kullu, HP, India \hfill 2010 \\
-  \vspace*{-.1in}
-  \begin{list1}
-	\item[] Matriculation
-	\item[] GPA: 9.8 / 10, ({\bf Top 2})
-  \end{list1}
-
+	Matriculation,
+    GPA: 9.8 / 10, ({\bf Top 2})
 
 \section{\sc Honors and Awards}
+
   {\it StackOverflow} Top Contributor ({\bf top 5\%}) among 6.2 million members, 2016
 
   \vspace*{-2.5mm}
+
   {\bf NASSCOM Emerge 50} for {\it StoryXpress} among over 500 startups across India for innovation impact, partnerships and growth, 2015
 
   \vspace*{-2.5mm}
+
   {\bf HYSEA Best Software Product, Student Innovation} for {\it StoryXpress} among over 100 student startups in Hyderabad, 2015
 
   \vspace*{-2.5mm}
+
   {\bf 2nd Prize Winner} at {\it Microsoft Build the Shield, India} among 280 teams, 2015
 
   \vspace*{-2.5mm}
+
   Won {\bf Best Science \& Technology Club} as a Core Member of {\it Infero} Programming Club at IIT Hyderabad for best contributions to student community, 2014
 
   \vspace*{-2.5mm}
+
   Qualified for {\it ACM ICPC Amritapuri Regionals} among over 1500 teams, 2013
 
   \vspace*{-2.5mm}
+
   {\bf TODAI Award} by {\it University of Tokyo, Japan} for outstanding academic performance to {\bf top one} student per batch with cash prize of USD 1500, 2013
 
   \vspace*{-2.5mm}
+
   {\bf Academic Excellence Award} by {\it IIT Hyderabad} for highest GPA in the batch, awarded only to one student, 2012
 
   \vspace*{-2.5mm}
+
   {\bf Top 0.5\%} in {\it IIT JEE} among 0.5 million students and {\bf Top 0.1\%} in {\it AIEEE} among 1.2 million students, 2012
 
 \section{\sc Research Experience}
+
   {\bf Sports Recognition via Dense Trajectory Features} \hfill September - November, 2015 \\
   	{\em Advisor: Dr. Vineeth N Balasubramanian} \\
   	I investigated feature extraction in videos using {\it HOG}, {\it HOF} and {\it MBH} detectors (based on {\it DenseTrack}) and represented these as Bag of Visual Words. It was trained via an {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset} and achieved accuracy of 30\%.
 
-  \vspace*{-2mm}
+  \vspace*{-2.5mm}
+
   {\bf eDrishti, Engagement Level Detection in Videos} \hfill January - April, 2015 \\
   	{\em Advisor: Dr. Vineeth N Balasubramanian} \\
   	This project was aimed at recognizing engagement levels (high, medium or low) of viewers during a video lecture. I investigated various feature extraction techniques including {\it Viola-Jones} for Facial Recognition and {\it Gabor Filters} for fine facial feature extraction. A dataset of over 500 short video clips of students watching lectures was created on campus and labelling was crowdsourced. With an SVM model trained, it achieved an accuracy of 67\%.
 
-  \vspace*{-2mm}
+  \vspace*{-2.5mm}
+
   {\bf Partial Face Detection} \hfill August - November, 2014 \\
   	{\em Advisor: Dr. Vineeth N Balasubramanian} \\
     In this project, I explored state-of-the-art methods to detect partial faces in images which becomes a challenge due to occlusion, illumination or shadows. One of the techniques investigated was using {\it Graph Based Image Segmentation and Coloring} using {\it Kruskal's MST} to detect similar spatial patches of image. A set of Graph hierarchies were constructed to cover different levels of locality information.
 
 \section{\sc Professional Experience}
-  {\bf Author, DC/OS MariaDB Service} \hfill September 2016 - present \\
-    {\it Website: https://github.com/dcos-labs/dcos-mariadb-service} \\
+
+  {\bf Author, MariaDB Service}, {\it github.com/dcos-labs/dcos-mariadb-service} \hfill September 2016 - \\
     I am currently building an Open Source distributed scheduler for {\it MariaDB} on top of {\bf Mesos}. Its purpose is to enable automated scheduling, scaling and maintenance of large-scale SQL databases. It is being targeted for {\it Datacenter Operating System (DC/OS)}.
 
-  \vspace*{-2mm}
-  {\bf Co-Founder, StoryXpress}, Hyderabad, India \hfill May 2013 - August 2016 \\
-    {\it Website: https://storyxpress.co} \\
-    I built a cloud service for large scale automated video content creation. I led complete engineering efforts from development to deployment. This included building the core {\it Video Rendering Engine} on top of {\it OpenGL} from scratch and the enterprise API used by large organizations like {\it Target} and {\it TradeIndia}. I also handled complete deployment automation on top of {\it AWS}, {\it Azure} and {\it Digital Ocean}.
+  \vspace*{-2.5mm}
+
+  {\bf Co-Founder, StoryXpress}, Hyderabad, India, {\it storyxpress.co}  \hfill May 2013 - August 2016 \\
+    I co-founded a cloud service for large scale automated video content creation. I led complete engineering efforts from development to deployment. This included building the core {\it Video Rendering Engine} on top of {\it OpenGL} from scratch and the enterprise API used by large organizations like {\it Target} and {\it TradeIndia}. I also handled complete deployment automation on top of {\it AWS}, {\it Azure} and {\it Digital Ocean}.
 
 \section{\sc Selected Projects}
-  {\bf Docker Consul} \hfill April 2016 - present \\
-	{\it Website: https://github.com/activatedgeek/docker-consul} \\
+
+  {\bf Docker Consul}, {\it github.com/activatedgeek/docker-consul} \hfill April 2016 \\
 	I built an Open Source {\it Docker} container image to deploy a quorum management technology called {\it Consul}. It included some networking tweaks to be readily deployed to data centers. It has close to {\bf 25000 pulls} since its creation.
 
-  \vspace*{-2mm}
-  {\bf QuickSlots v2.0} \hfill February - April, 2016 \\
+  \vspace*{-2.5mm}
+
+  {\bf QuickSlots v2.0}, {\it github.com/activatedgeek/QuickSlots}  \hfill February - April, 2016 \\
   	{\it Advisor: Dr. Ramakrishna Upadrasta, Dr. MV Panduranga Rao} \\
-    {\it Website: https://github.com/activatedgeek/QuickSlots} \\
     I built an Automated Timetable Scheduler for the {\it Computer Science Department, IIT Hyderabad}. The input to the system is faculty's preferences and the output is a consolidated time-table. The problem was modelled as {\bf Min Cost Bipartite Matching}. A mathematical formulation for edge weights was created based on factors like time and venue conflicts, student batch size and kind of courses (lab or theory).
 
-  \vspace*{-2mm}
-  {\bf COOL Compiler} \hfill September - November, 2014 \\
+  \vspace*{-2.5mm}
+
+  {\bf COOL Compiler}, {\it github.com/activatedgeek/COOL-Compiler} \hfill September - November, 2014 \\
   	{\it Advisor: Dr. Ramakrishna Upadrasta} \\
-	{\it Website: https://github.com/activatedgeek/COOL-Compiler} \\
   	I built a compiler for the {\it Classroom Object Oriented Language}. This included understanding and implementing the {\bf Lexing}, {\bf Parsing} and {\bf Semantic} phases for the {\it COOL} grammar. The implementation was done in C++ and including machine code generation for the {\it MIPS} architecture.
 
-  \vspace*{-2mm}
-  {\bf DownloadPlus} \hfill October - November 2014 \\
-  	{\it Website: https://github.com/activatedgeek/DownloadPlus} \\
-  	I built a Multi-threaded Download Manager in Java. It exploited the chunked downloading feature prescribed by the {\it HTTP/1.1 specification (RFC 2616)} to allow parallel downloading multiple byte ranges of a remote file, decreasing download times. It used the {\it Java Sockets API} and {\it Java Threads API}.
+  \vspace*{-2.5mm}
 
-  \vspace*{-2mm}
-  {\bf GossipBox} \hfill September - October 2014 \\
-    {\it Website: https://github.com/activatedgeek/GossipBox} \\
+  {\bf DownloadPlus}, {\it github.com/activatedgeek/DownloadPlus} \hfill October - November 2014 \\
+  	I built a Multi-threaded Download Manager in Java. It exploited the chunked downloading feature prescribed by the {\it HTTP/1.1 specification (RFC 2616)} to allow parallel downloading multiple byte ranges of a remote file, decreasing download times. It used {\it Java Sockets} and {\it Java Threads} API.
+
+  \vspace*{-2.5mm}
+
+  {\bf GossipBox}, {\it github.com/activatedgeek/GossipBox} \hfill September - October 2014 \\
     I built a simple Client-Server Chat System in {\it C++} using the {\it POSIX Socket API}. It maintained an in-memory hash table of connected clients which were kept in regular sync and were removed from list of active clients once sockets timed out.
 
 \section{\sc Technical Skills}
+
   {\bf Technologies}: Git, MySQL, RabbitMQ, Redis, Ansible, Vagrant, Docker, React, OpenGL, Android \\
   {\bf Programming Languages}: Java, C, C++, Go, Python, Node
 
 \section{\sc Relevant Coursework}
+
   {\bf Core:} Computer Vision, Soft Computing, Numerical Linear Algebra for Data Analysis, Predictive Analytics \& Knowledge Discovery, Operating Systems, Compiler Design, Computer Networks, Data Structure and Algorithms, Discrete Mathematics \\
   {\bf Independent Coursework:} Machine Learning ({\it Coursera}), Neural Networks ({\it Coursera}) \\
-  {\bf Breadth:} Real Analysis, Complex Analysis, Calculus, Economics \\
+  {\bf Breadth:} Real Analysis, Complex Analysis, Calculus, Economics
 
 \section{\sc Positions of Responsibility}
+
   {\bf Volunteer, National Service Scheme}, IIT Hyderabad \hfill 2012 - 2016 \\
     I {\it visited old-age homes and made donations}. I was actively involved in {\it planting and watering greens} around the campus. I gave {\it lectures on Basic Science and Mathematics} to primary school students. I was also a volunteer for the {\it campus street cleanliness drive} to remove dirt and weeds.
 
-  \vspace*{-2mm}
+  \vspace*{-2.5mm}
+
   {\bf Core Member, Infero}, IIT Hyderabad \hfill 2013 - 2014 \\
   	I was a Core Member of {\it Infero}, the Programming Club of IIT Hyderabad. I prepared and delivered presentations on {\bf Introduction to C} and {\bf Introduction to Python} to freshmen. My team also introduced {\it Code Nights} to encourage Competitive Programming in the student community. We won the {\bf Best Sci-Tech Club Award} for these contributions.
 
-  \vspace*{-2mm}
+  \vspace*{-2.5mm}
+
   {\bf Events Manager, Entrepreneurship Cell}, IIT Hyderabad \hfill 2013 - 2014 \\
     I was responsible for managing campus and city-wide events for the club. My team introduced the {\bf first ever lecture series} called {\it Spark} which invited successful entrepreneurs for lectures and interaction. I also drafted a {\it Business Plan Competition} as a part of the technical fest.
 
