minor information updates

--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -25,25 +25,24 @@
 
 \begin{document}
 
-\name{Sanyam Kapoor \vspace*{.1in}}
+\name{Sanyam Kapoor \vspace*{.05in}}
 
 \begin{resume}
 
 \section{\sc Contact Information}
 
   \vspace{.05in}
-  \begin{tabular}{@{}p{2.9in}p{4in}}
 
-	{\it Mobile:}  (91)7702182987 \\
-	{\it E-mail:}  cs12b1043@iith.ac.in\\
+  \begin{tabular}{@{}p{2.9in}p{6in}}
+	{\it Mobile:}  +91 77021 82987 \\
+	{\it E-mail:}  cs12b1043@iith.ac.in \\
 	{\it Website:} blog.sanyamkapoor.com \\
-	{\it Github:} github.com/activatedgeek \\
-
+	{\it Github:} github.com/activatedgeek
   \end{tabular}
 
 %\begin{comment}
 \section{\sc Research Interests}
-  Computer Vision, Neural Networks, Deep Learning
+  Computer Vision and Perception, Object Recognition, Deep Learning
 %\end{comment}
 
 \section{\sc Education}
@@ -103,19 +102,19 @@
 \section{\sc Research Experience}
 
   {\bf Sports Recognition via Dense Trajectory Features} \hfill September - November, 2015 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian} \\
+  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \\
   	I investigated feature extraction in videos using {\it HOG}, {\it HOF} and {\it MBH} detectors (based on {\it DenseTrack}) and represented these as Bag of Visual Words. It was trained via an {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset} and achieved accuracy of 30\%.
 
   \vspace*{-2.5mm}
 
   {\bf eDrishti, Engagement Level Detection in Videos} \hfill January - April, 2015 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian} \\
+  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn, Matlab, Weka} \\
   	This project was aimed at recognizing engagement levels (high, medium or low) of viewers during a video lecture. I investigated various feature extraction techniques including {\it Viola-Jones} for Facial Recognition and {\it Gabor Filters} for fine facial feature extraction. A dataset of over 500 short video clips of students watching lectures was created on campus and labelling was crowdsourced. With an SVM model trained, it achieved an accuracy of 67\%.
 
   \vspace*{-2.5mm}
 
   {\bf Partial Face Detection} \hfill August - November, 2014 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian} \\
+  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \\
     In this project, I explored state-of-the-art methods to detect partial faces in images which becomes a challenge due to occlusion, illumination or shadows. One of the techniques investigated was using {\it Graph Based Image Segmentation and Coloring} using {\it Kruskal's MST} to detect similar spatial patches of image. A set of Graph hierarchies were constructed to cover different levels of locality information.
 
 \section{\sc Professional Experience}
@@ -137,7 +136,7 @@
 
   {\bf QuickSlots v2.0}, {\it github.com/activatedgeek/QuickSlots}  \hfill February - April, 2016 \\
   	{\it Advisor: Dr. Ramakrishna Upadrasta, Dr. MV Panduranga Rao} \\
-    I built an Automated Timetable Scheduler for the {\it Computer Science Department, IIT Hyderabad}. The input to the system is faculty's preferences and the output is a consolidated time-table. The problem was modelled as {\bf Min Cost Bipartite Matching}. A mathematical formulation for edge weights was created based on factors like time and venue conflicts, student batch size and kind of courses (lab or theory).
+    I built a Timetable Scheduler for the {\it Computer Science Department, IIT Hyderabad}. The input to the system is faculty's preferences and the output is a consolidated time-table. The problem was modelled as {\bf Min Cost Bipartite Matching}. A mathematical formulation for edge weights was created based on factors like time and venue conflicts, student batch size and course kind.
 
   \vspace*{-2.5mm}
 
@@ -153,7 +152,7 @@
   \vspace*{-2.5mm}
 
   {\bf GossipBox}, {\it github.com/activatedgeek/GossipBox} \hfill September - October 2014 \\
-    I built a simple Client-Server Chat System in {\it C++} using the {\it POSIX Socket API}. It maintained an in-memory hash table of connected clients which were kept in regular sync and were removed from list of active clients once sockets timed out.
+    I built a Client-Server Chat System in {\it C++} using the {\it POSIX Socket API}. It maintained an in-memory hash table of connected clients which were kept in regular sync and automatic garbage collection once sockets timed out.
 
 \section{\sc Technical Skills}
 
@@ -186,7 +185,7 @@
 
   \begin{tabular}{@{}p{1.85in}p{2in}p{2in}}
 
-  {\bf Dr. Vineeth N \newline Balasubramaniam } & {\bf Dr. Ramakrishna \newline Upadrasta} & {\bf Joerg Schad} \\
+  {\bf Dr. Vineeth N \newline Balasubramanian } & {\bf Dr. Ramakrishna \newline Upadrasta} & {\bf Joerg Schad} \\
         {\it Assistant Professor} & {\it Assistant Professor} & {\it Distributed Systems Engineer} \\
         {\it IIT Hyderabad} & {\it IIT Hyderabad} & {\it Mesosphere Inc} \\
         {\it Hyderabad, India} & {\it Hyderabad, India} & {\it Hamburg, Germany} \\
