Added GA, CV now a hugo static file

--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -36,7 +36,7 @@
   \begin{tabular}{@{}p{2.9in}p{6in}}
 	{\it Mobile:}  +91 77021 82987 \\
 	{\it E-mail:}  cs12b1043@iith.ac.in \\
-	{\it Website:} blog.sanyamkapoor.com \\
+	{\it Website:} www.sanyamkapoor.com \\
 	{\it Github:} github.com/activatedgeek
   \end{tabular}
 
