Updated content organization

--- a/content/guides/cloud-apps/2.md
+++ b/content/guides/cloud-apps/2.md
@@ -1,13 +1,12 @@
 ---
 date: 2015-12-06T00:27:09+05:30
 description: Developing better code with simplistic philosophies
-title: 'The Ultimate Guide to Building Cloud Applications: Development'
+title: 'The Ultimate Guide to Building Cloud Applications - Development'
 categories: []
 tags:
   - devops
   - cloud
   - applications
-url: /devops/ultimate-guide-to-building-cloud-applications/development
 ---
 
 Every big project ever dreamt of, always started from that one folder sitting on
