--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -1,14 +1,16 @@
 \documentclass[margin,line]{res}
 
 \usepackage{verbatim}
+\usepackage{anysize}
+
 \oddsidemargin -.5in
 \evensidemargin -.5in
+\marginsize{0.5in}{0.5in}{1in}{1in}
+
 \textwidth=6.0in
+
 \itemsep=0in
 \parsep=0in
-% if using pdflatex:
-%\setlength{\pdfpagewidth}{\paperwidth}
-%\setlength{\pdfpageheight}{\paperheight}
 
 \newenvironment{list1}{
   \begin{list}{\ding{113}}{%
@@ -34,16 +36,14 @@
   \vspace{.05in}
 
   \begin{tabular}{@{}p{2.9in}p{6in}}
-	{\it Mobile:}  +91 77021 82987 \\
-	{\it E-mail:}  cs12b1043@iith.ac.in \\
-	{\it Website:} www.sanyamkapoor.com \\
-	{\it Github:} github.com/activatedgeek
+	{\it Website:} www.sanyamkapoor.com & {\it Email:} cs12b1043@iith.ac.in \\
+	{\it Github:} github.com/activatedgeek & {\it Mobile:} +91 77021 82987  \\
   \end{tabular}
 
-%\begin{comment}
+\begin{comment}
 \section{\sc Research Interests}
   Computer Vision and Perception, Object Recognition, Deep Learning
-%\end{comment}
+\end{comment}
 
 \section{\sc Education}
 
@@ -65,62 +65,62 @@
 
 \section{\sc Honors and Awards}
 
-  {\it StackOverflow} Top Contributor ({\bf top 5\%}) among 6.2 million members, 2016
+  {\bf StackOverflow Top Contributor}, top 5\% among 6.2 million members, 2016
 
   \vspace*{-2.5mm}
 
-  {\bf NASSCOM Emerge 50} for {\it StoryXpress} among over 500 startups across India for innovation impact, partnerships and growth, 2015
+  {\bf NASSCOM Emerge 50}, {\it StoryXpress} among over 500 startups across India for innovation impact and growth, 2015
 
   \vspace*{-2.5mm}
 
-  {\bf HYSEA Best Software Product, Student Innovation} for {\it StoryXpress} among over 100 student startups in Hyderabad, 2015
+  {\bf HYSEA Best Software Product, Student Innovation}, {\it StoryXpress} among over 100 startups in Hyderabad, 2015
 
   \vspace*{-2.5mm}
 
-  {\bf 2nd Prize Winner} at {\it Microsoft Build the Shield, India} among 280 teams, 2015
+  {\bf Microsoft Build the Shield, India}, First Runner Up among 280 teams, 2015
 
   \vspace*{-2.5mm}
 
-  Won {\bf Best Science \& Technology Club} as a Core Member of {\it Infero} Programming Club at IIT Hyderabad for best contributions to student community, 2014
+  {\bf Best Science \& Technology Club}, Core Member, {\it Infero}, IIT Hyderabad for contributions to student community, 2014
 
   \vspace*{-2.5mm}
 
-  Qualified for {\it ACM ICPC Amritapuri Regionals} among over 1500 teams, 2013
+  {\bf ACM ICPC Amritapuri Regionals} finalist among over 1500 teams, 2013
 
   \vspace*{-2.5mm}
 
-  {\bf TODAI Award} by {\it University of Tokyo, Japan} for outstanding academic performance to {\bf top one} student per batch with cash prize of USD 1500, 2013
+  {\bf TODAI Award}, {\it University of Tokyo, Japan} for outstanding academic performance ({\bf Rank 1}), cash prize of USD 1500, 2013
 
   \vspace*{-2.5mm}
 
-  {\bf Academic Excellence Award} by {\it IIT Hyderabad} for highest GPA in the batch, awarded only to one student, 2012
+  {\bf Academic Excellence Award}, {\it IIT Hyderabad} for highest GPA, 2012
 
   \vspace*{-2.5mm}
 
-  {\bf Top 0.5\%} in {\it IIT JEE} among 0.5 million students and {\bf Top 0.1\%} in {\it AIEEE} among 1.2 million students, 2012
+  {\bf Top 0.5\%}, {\it IIT JEE} (0.5 million students) and {\bf Top 0.1\%}, {\it AIEEE} (1.2 million students), 2012
 
 \section{\sc Research Experience}
 
   {\bf Sports Recognition via Dense Trajectory Features} \hfill September - November, 2015 \\
   	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \\
-  	I investigated feature extraction in videos using {\it HOG}, {\it HOF} and {\it MBH} detectors (based on {\it DenseTrack}) and represented these as Bag of Visual Words. It was trained via an {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset} and achieved accuracy of 30\%.
+    I investigated feature extraction in videos using {\it HOG}, {\it HOF} and {\it MBH} detectors (based on optical flow analysis with {\it DenseTrack}) and represented these as Bag of Visual Words. It was trained via an {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset} and achieved accuracy of 30\%.
 
   \vspace*{-2.5mm}
 
   {\bf eDrishti, Engagement Level Detection in Videos} \hfill January - April, 2015 \\
   	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn, Matlab, Weka} \\
-  	This project was aimed at recognizing engagement levels (high, medium or low) of viewers during a video lecture. I investigated various feature extraction techniques including {\it Viola-Jones} for Facial Recognition and {\it Gabor Filters} for fine facial feature extraction. A dataset of over 500 short video clips of students watching lectures was created on campus and labelling was crowdsourced. With an SVM model trained, it achieved an accuracy of 67\%.
+  	I built a One-Vs-Rest SVM Classifier to recognize engagement levels (high, medium or low) of viewers during a MOOC video. It involved extracting fine facial features using {\it Gabor Filters}, achieving an accuracy of 67\% on a self-curated dataset of over 200 video clips.
 
   \vspace*{-2.5mm}
 
   {\bf Partial Face Detection} \hfill August - November, 2014 \\
   	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \\
-    In this project, I explored state-of-the-art methods to detect partial faces in images which becomes a challenge due to occlusion, illumination or shadows. One of the techniques investigated was using {\it Graph Based Image Segmentation and Coloring} using {\it Kruskal's MST} to detect similar spatial patches of image. A set of Graph hierarchies were constructed to cover different levels of locality information.
+  I investigated state-of-the-art methods to detect partial faces in images with more natural environments. Occlusions, illumination variations and shadows make this problem challenging. {\it Graph Based Image Segmentation and Coloring} was used for spatial similarity analysis.
 
 \section{\sc Professional Experience}
 
   {\bf Author, MariaDB Service}, {\it github.com/dcos-labs/dcos-mariadb-service} \hfill September 2016 - \\
-    I am currently building an Open Source distributed scheduler for {\it MariaDB} on top of {\bf Mesos}. Its purpose is to enable automated scheduling, scaling and maintenance of large-scale SQL databases. It is being targeted for {\it Datacenter Operating System (DC/OS)}.
+    I am building an Open Source distributed scheduler for {\it MariaDB} on top of {\em Mesos}. It enables automated scheduling, scaling and maintenance of large-scale SQL databases deployed on {\it Datacenter Operating System (DC/OS)}. I've contributed container support to the {\it Mesos Framework Java SDK}.
 
   \vspace*{-2.5mm}
 
@@ -129,35 +129,35 @@
 
 \section{\sc Selected Projects}
 
-  {\bf Docker Consul}, {\it github.com/activatedgeek/docker-consul} \hfill April 2016 \\
-	I built an Open Source {\it Docker} container image to deploy a quorum management technology called {\it Consul}. It included some networking tweaks to be readily deployed to data centers. It has close to {\bf 25000 pulls} since its creation.
+  {\bf Docker Consul} \hfill April 2016 \\
+	I built an Open Source {\it Docker} container image to deploy a quorum management technology called {\it Consul}. It included some networking tweaks to be readily deployed to data centers. It has close to {\em 25000 pulls} since its creation.
 
   \vspace*{-2.5mm}
 
-  {\bf QuickSlots v2.0}, {\it github.com/activatedgeek/QuickSlots}  \hfill February - April, 2016 \\
+  {\bf QuickSlots v2.0} \hfill February - April, 2016 \\
   	{\it Advisor: Dr. Ramakrishna Upadrasta, Dr. MV Panduranga Rao} \\
-    I built a Timetable Scheduler for the {\it Computer Science Department, IIT Hyderabad}. The input to the system is faculty's preferences and the output is a consolidated time-table. The problem was modelled as {\bf Min Cost Bipartite Matching}. A mathematical formulation for edge weights was created based on factors like time and venue conflicts, student batch size and course kind.
+    I built a Timetable Scheduler for the {\it Computer Science Department, IIT Hyderabad}. The input to the system is faculty's preferences and the output is a consolidated time-table. The problem was modelled as {\em Min Cost Bipartite Matching}. A mathematical formulation for edge weights was created based on factors like time and venue conflicts, student batch size and course kind.
 
   \vspace*{-2.5mm}
 
-  {\bf COOL Compiler}, {\it github.com/activatedgeek/COOL-Compiler} \hfill September - November, 2014 \\
+  {\bf COOL Compiler} \hfill September - November, 2014 \\
   	{\it Advisor: Dr. Ramakrishna Upadrasta} \\
-  	I built a compiler for the {\it Classroom Object Oriented Language}. This included understanding and implementing the {\bf Lexing}, {\bf Parsing} and {\bf Semantic} phases for the {\it COOL} grammar. The implementation was done in C++ and including machine code generation for the {\it MIPS} architecture.
+  	I built a compiler for the {\it Classroom Object Oriented Language}. This included understanding and implementing the {\em Lexing}, {\em Parsing} and {\em Semantic} phases for the {\it COOL} grammar. The implementation was done in C++ and including machine code generation for the {\it MIPS} architecture.
 
   \vspace*{-2.5mm}
 
-  {\bf DownloadPlus}, {\it github.com/activatedgeek/DownloadPlus} \hfill October - November 2014 \\
+  {\bf DownloadPlus} \hfill October - November 2014 \\
   	I built a Multi-threaded Download Manager in Java. It exploited the chunked downloading feature prescribed by the {\it HTTP/1.1 specification (RFC 2616)} to allow parallel downloading multiple byte ranges of a remote file, decreasing download times. It used {\it Java Sockets} and {\it Java Threads} API.
 
   \vspace*{-2.5mm}
 
-  {\bf GossipBox}, {\it github.com/activatedgeek/GossipBox} \hfill September - October 2014 \\
+  {\bf GossipBox} \hfill September - October 2014 \\
     I built a Client-Server Chat System in {\it C++} using the {\it POSIX Socket API}. It maintained an in-memory hash table of connected clients which were kept in regular sync and automatic garbage collection once sockets timed out.
 
 \section{\sc Technical Skills}
 
-  {\bf Technologies}: Git, MySQL, RabbitMQ, Redis, Ansible, Vagrant, Docker, React, OpenGL, Android \\
-  {\bf Programming Languages}: Java, C, C++, Go, Python, Node
+  {\bf Technologies}: Git, MySQL, Scikit-learn, OpenGL, React, Docker, Redis \\
+  {\bf Programming Languages}: Go, Java, C, C++, Python, Node
 
 \section{\sc Relevant Coursework}
 
@@ -168,19 +168,19 @@
 \section{\sc Positions of Responsibility}
 
   {\bf Volunteer, National Service Scheme}, IIT Hyderabad \hfill 2012 - 2016 \\
-    I {\it visited old-age homes and made donations}. I was actively involved in {\it planting and watering greens} around the campus. I gave {\it lectures on Basic Science and Mathematics} to primary school students. I was also a volunteer for the {\it campus street cleanliness drive} to remove dirt and weeds.
+    I donated clothes to {\it old-age homes}. I gave {\it lectures on Basic Science and Mathematics} to primary school students. I was actively involved in {\it planting and watering greens} around the campus and was a volunteer for the {\it campus cleanliness drive}.
 
   \vspace*{-2.5mm}
 
   {\bf Core Member, Infero}, IIT Hyderabad \hfill 2013 - 2014 \\
-  	I was a Core Member of {\it Infero}, the Programming Club of IIT Hyderabad. I prepared and delivered presentations on {\bf Introduction to C} and {\bf Introduction to Python} to freshmen. My team also introduced {\it Code Nights} to encourage Competitive Programming in the student community. We won the {\bf Best Sci-Tech Club Award} for these contributions.
+  	I was a Core Member of {\em Infero}, the Programming Club of IIT Hyderabad. I prepared and delivered presentations on {\em Introduction to C} and {\em Introduction to Python} to freshmen. My team also introduced {\it Code Nights} to encourage Competitive Programming in the student community. We won the {\em Best Sci-Tech Club Award} for these contributions.
 
   \vspace*{-2.5mm}
 
   {\bf Events Manager, Entrepreneurship Cell}, IIT Hyderabad \hfill 2013 - 2014 \\
-    I was responsible for managing campus and city-wide events for the club. My team introduced the {\bf first ever lecture series} called {\it Spark} which invited successful entrepreneurs for lectures and interaction. I also drafted a {\it Business Plan Competition} as a part of the technical fest.
+    I was responsible for managing campus and city-wide events for the club. My team introduced the {\em first ever lecture series} called {\it Spark} which invited successful entrepreneurs for lectures and interaction. I also drafted a {\it Business Plan Competition} as a part of the technical fest.
 
-%\begin{comment}
+\begin{comment}
 \section{\sc References}
 
   \begin{tabular}{@{}p{1.85in}p{2in}p{2in}}
@@ -192,7 +192,7 @@
         {\it vineethnb@iith.ac.in} & {\it ramakrishna@iith.ac.in} & {\it joerg@mesosphere.io} \\
 
   \end{tabular}
-%\end{comment}
+\end{comment}
 
 \end{resume}
 \end{document}
