Minor spacing fixes with titles and sub-titles

--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -102,19 +102,19 @@
 \section{\sc Research Experience}
 
   {\bf Sports Recognition via Dense Trajectory Features} \hfill September - November, 2015 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \\
+  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \vspace{0.15 \baselineskip} \\
     I investigated feature extraction in videos using {\it HOG}, {\it HOF} and {\it MBH} detectors (based on optical flow analysis with {\it DenseTrack}) and represented these as Bag of Visual Words. It was trained via an {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset} and achieved accuracy of 30\%.
 
   \vspace*{-2.5mm}
 
   {\bf eDrishti, Engagement Level Detection in Videos} \hfill January - April, 2015 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn, Matlab, Weka} \\
+  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn, Matlab, Weka} \vspace{0.15 \baselineskip} \\
   	I built a One-Vs-Rest SVM Classifier to recognize engagement levels (high, medium or low) of viewers during a MOOC video. It involved extracting fine facial features using {\it Gabor Filters}, achieving an accuracy of 67\% on a self-curated dataset of over 200 video clips.
 
   \vspace*{-2.5mm}
 
   {\bf Partial Face Detection} \hfill August - November, 2014 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \\
+  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \vspace{0.15 \baselineskip} \\
   I investigated state-of-the-art methods to detect partial faces in images with more natural environments. Occlusions, illumination variations and shadows make this problem challenging. {\it Graph Based Image Segmentation and Coloring} was used for spatial similarity analysis.
 
 \section{\sc Professional Experience}
@@ -135,13 +135,13 @@
   \vspace*{-2.5mm}
 
   {\bf QuickSlots v2.0} \hfill February - April, 2016 \\
-  	{\it Advisor: Dr. Ramakrishna Upadrasta, Dr. MV Panduranga Rao} \\
+  	{\it Advisor: Dr. Ramakrishna Upadrasta, Dr. MV Panduranga Rao} \vspace{0.15 \baselineskip} \\
     I built a Timetable Scheduler for the {\it Computer Science Department, IIT Hyderabad}. The input to the system is faculty's preferences and the output is a consolidated time-table. The problem was modelled as {\em Min Cost Bipartite Matching}. A mathematical formulation for edge weights was created based on factors like time and venue conflicts, student batch size and course kind.
 
   \vspace*{-2.5mm}
 
   {\bf COOL Compiler} \hfill September - November, 2014 \\
-  	{\it Advisor: Dr. Ramakrishna Upadrasta} \\
+  	{\it Advisor: Dr. Ramakrishna Upadrasta} \vspace{0.15 \baselineskip} \\
   	I built a compiler for the {\it Classroom Object Oriented Language}. This included understanding and implementing the {\em Lexing}, {\em Parsing} and {\em Semantic} phases for the {\it COOL} grammar. The implementation was done in C++ and including machine code generation for the {\it MIPS} architecture.
 
   \vspace*{-2.5mm}
@@ -157,7 +157,7 @@
 \section{\sc Technical Skills}
 
   {\bf Technologies}: Git, MySQL, Scikit-learn, OpenGL, React, Docker, Redis \\
-  {\bf Programming Languages}: Go, Java, C, C++, Python, Node
+  {\bf Programming Languages}: Go, Java, C, C++, Python, Node, MATLAB
 
 \section{\sc Relevant Coursework}
 
