--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -40,10 +40,8 @@
 	{\it Github:} github.com/activatedgeek & {\it Mobile:} +91 77021 82987  \\
   \end{tabular}
 
-\begin{comment}
 \section{\sc Research Interests}
   Computer Vision and Perception, Object Recognition, Deep Learning
-\end{comment}
 
 \section{\sc Education}
 
@@ -65,7 +63,7 @@
 
 \section{\sc Honors and Awards}
 
-  {\bf StackOverflow Top Contributor}, top 5\% among 6.2 million members, 2016
+  {\bf StackOverflow Top Contributor}, top 0.6\% overall among 7 million members
 
   \vspace*{-2.5mm}
 
@@ -119,6 +117,11 @@
 
 \section{\sc Professional Experience}
 
+  {\bf Software Engineer, Headout}, Bengaluru, India, {\it headout.com}  \hfill December 2016 - \\
+    I am part of the {\it Platform} team which handles development of APIs and client presentation layers. I am also actively engaged in internal developer tooling and migrating current infrastructure to CI/CD.
+
+  \vspace*{-2.5mm}
+
   {\bf Author, MariaDB Service}, {\it github.com/dcos-labs/dcos-mariadb-service} \hfill September 2016 - \\
     I am building an Open Source distributed scheduler for {\it MariaDB} on top of {\em Mesos}. It enables automated scheduling, scaling and maintenance of large-scale SQL databases deployed on {\it Datacenter Operating System (DC/OS)}. I've contributed container support to the {\it Mesos Framework Java SDK}.
 
@@ -165,6 +168,7 @@
   {\bf Independent Coursework:} Machine Learning ({\it Coursera}), Neural Networks ({\it Coursera}) \\
   {\bf Breadth:} Real Analysis, Complex Analysis, Calculus, Economics
 
+\begin{comment}
 \section{\sc Positions of Responsibility}
 
   {\bf Volunteer, National Service Scheme}, IIT Hyderabad \hfill 2012 - 2016 \\
@@ -180,7 +184,6 @@
   {\bf Events Manager, Entrepreneurship Cell}, IIT Hyderabad \hfill 2013 - 2014 \\
     I was responsible for managing campus and city-wide events for the club. My team introduced the {\em first ever lecture series} called {\it Spark} which invited successful entrepreneurs for lectures and interaction. I also drafted a {\it Business Plan Competition} as a part of the technical fest.
 
-\begin{comment}
 \section{\sc References}
 
   \begin{tabular}{@{}p{1.85in}p{2in}p{2in}}
