Update employment details

--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -118,7 +118,7 @@
 \section{\sc Professional Experience}
 
   {\bf Software Engineer, Headout}, Bengaluru, India, {\it headout.com}  \hfill December 2016 - \\
-    I am part of the {\it Platform} team which handles development of APIs and client presentation layers. I am also actively engaged in internal developer tooling and migrating current infrastructure to CI/CD.
+    I am part of the {\it Platform} team which handles development of APIs and client presentation layers. I also successfully led charge to move all services to a CI/CD enabled deployment pattern and actively engaged in internal developer tooling on top of Docker.
 
   \vspace*{-2.5mm}
 
